[DEMO] Result of code formatter on security